rettet JQuery fejl, så input kan læses - manglede # foran id i selctor $(#txtForm) - der er intet på $(txtForm)

--- a/src/main/resources/templates/jquery.html
+++ b/src/main/resources/templates/jquery.html
@@ -33,8 +33,14 @@
     })
 
     function btnClick(){
-        $("#textsektion").hide();
-        alert($("#textsektion").text());
+
+        $("#textsektion").toggle(); //skift mellem hidden/unhidden
+
+        $("button").text("Opsamling på JQuery");
+        var v = $("#txtForm").val();
+        alert(parseFloat(v));
+        alert(parseInt(v, 10));
+
     }
 </script>
 
